<resources>
    <string name="app_name">EasypayPrototype</string>

    <string name="lbl_access">Sláið inn aðgangskóða</string>
    <string name="Product_Name">EasyPay</string>
    <string name="Product_Type">Phone POS</string>
    <string name="Amount">Upphæð</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_amount">Upphæð:</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_enter_card_manualy">EnterCardManualy</string>
    <string name="title_activity_payment_result">PaymentResult</string>
    <string name="title_activity_receipt">Kvittun</string>
    <string name="title_activity_receipt_sent">ReceiptSent</string>
    <string name="accept">Staðfesta</string>
    <string name="user">Fyrirtæki ehf</string>
    <string name="welcome">Velkomin!</string>
    <string name="amount">Viðskipti ISK.</string>
    <string name="card_number">Kortanúmer:</string>
    <string name="active">Gildistími:</string>
    <string name="cvs">CVS:</string>
    <string name="card_symbol">Card symbol picture</string>
    <string name="pay">Leggðu kortið upp að bakhlið símans til þess að greiða</string>
    <string name="insert_cardnumber">Setja inn Kortanúmer</string>
    <string name="confirmed">Heimilað</string>
    <string name="info_rvk">101 Reykjavík</string>
    <string name="info_buisines">Fyrirtæki ehf</string>
    <string name="info_visa">Visa Electron</string>
    <string name="info_valitor">Færsluhirðir: Valitor</string>
    <string name="info_adress">Strandgata 1337</string>
    <string name="info_date">01.01.2015</string>
    <string name="info_time_stamp">Tími: 13:37</string>
    <string name="info_total_amount">666</string>
    <string name="is_receipt">Kvittun:</string>
    <string name="no">Nei</string>
    <string name="yes">Já</string>
    <string name="sms">Textaskilaboð</string>
    <string name="email">Tölvupóstur</string>
    <string name="thanks">Takk fyrir viðskiptin</string>
    <string name="done">Lokið</string>
    <string name="receipt">Kvittun þín hefur verið sent á: tölvupóstur@tölvupóstur.is</string>
    <string name="phone">Sláið inn símanúmer</string>
    <string name="enter_email">Sláið inn netfang</string>
    <string name="sms_lbl">Textaskilaboð</string>
    <string name="email_lbl">Tölvupóstur</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="neg">+/-</string>
    <string name="c">C</string>
    <string name="del">Del</string>
    <string name="eq">=</string>
    <string name="finish">Ljúka</string>
    <string name="product_name">Nafn vöru:</string>
    <string name="product_price">Verð:</string>
    <string name="add_product">Bæta við vöru</string>
    <string name="start_sale">Hefja sölu</string>
    <string name="sales_log">Færsluyfirlit</string>
    <string name="refund">Bakfæra færslu</string>

    <string name="hello_world">Hello world!</string>
    <string name="amount_products">Vörulisti</string>
    <string name="title_activity_start">start</string>

    <!-- Msg -->
    <string name="billing_success">Thanks for your donation!</string>
    <string name="card_read">Card read</string>
    <string name="card_reading">Reading in progress&#8230;</string>
    <string name="card_deleted">Card data deleted</string>
    <string name="card_reading_desc">Please do not remove or move card during reading.</string>
    <string name="nfc_locked">NFC is locked on your card</string>
    <string name="msg_nfc_disable">Please enable NFC and press back to return to this application.</string>
    <string name="msg_activate_nfc">OK</string>
    <string name="msg_info">Info</string>
    <string name="donate_banner">Help us to improve this app, donate !</string>

    <!-- Error -->
    <string name="error_communication_nfc">Please do not move card, try again !</string>
    <string name="error_card_unknown">Unknown EMV card (Please send logs)</string>
    <string name="error_link">No web browser found</string>
    <string name="error_email">No email client found</string>

    <!-- Tabs -->
    <string name="viewpager_carddetail">Card detail</string>
    <string name="viewpager_transactions">Transactions</string>
    <string name="viewpager_log">Log</string>

    <!-- Card Detail -->
    <string name="paycard_back_text">Tap your NFC paycard \n to the back of your phone</string>
    <string name="extended_card_detail_title">Extended card details</string>
    <string name="card_representation_title">Card Representation</string>

    <string name="extended_title_AID">Card AID :</string>
    <string name="extended_title_application_label">Application :</string>
    <string name="extended_title_pin_try">Pin try left :</string>
    <string name="extended_title_card_type">Card type :</string>
    <string name="extended_card_holder_name">Holder name :</string>
    <string name="extended_title_possible_bank">Card issuer :\n(possible)</string>
    <string name="extended_title_times">Time(s)</string>

    <!-- Transaction -->
    <string name="transaction_empty">Your card doesn\'t provided\ntransaction history</string>

    <!-- Transaction detail -->
    <string name="transaction_type">Transaction type :</string>
    <string name="transaction_cryptogram">Cryptogram :</string>
    <string name="transaction_country">Terminal Country :</string>
    <string name="transaction_unknown">Unknown</string>

    <!-- Transaction type -->
    <string name="transaction_type_0">Purchase</string>
    <string name="transaction_type_1">Cash advance</string>
    <string name="transaction_type_9">Cash back</string>
    <string name="transaction_type_32">Refund</string>

    <!-- Logs -->
    <string name="mail_subject">[EMV Reader] Log report</string>
    <string name="mail_popup_title">Send log by mail...</string>
    <string name="mail_to">android@julien-millau.fr</string>


    <!-- About -->
    <string name="about_app_detail">This app was made to read public data on banking NFC cards compliants with EMV norm.</string>
    <string name="about_source_detail">Source Code and documentation available on <a href="https://github.com/devnied/EMV-NFC-Paycard-Enrollment">Github</a>. Application written by <a href="http://julien-millau.fr">Julien Millau</a></string>
    <string name="about_inapp_text">Help us to improve this app with donation</string>
    <string name="about_title">About</string>
    <string name="about_inApp">Donate</string>

    <!-- Navigation drawable -->
    <string name="navigation_menu_open">Navigation menu open</string>
    <string name="navigation_menu_close">Navigation menu close</string>
    <string-array name="navigation_items">
        <item>Cards details</item>
        <item>Configuration</item>
        <item>About</item>
    </string-array>

    <!-- Preferences -->
    <string name="general_category">General Preferences</string>
    <string name="pref_save_read_card">Save card</string>
    <string name="pref_sum_save_card">Save detail on file system</string>
    <string name="pref_remove_all_stored_cards">Remove stored data</string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string-array name="months">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>yellow</item>
        <item>purple</item>
        <item>orange</item>
        <item>Blue1</item>
        <item>Blue2</item>
        <item>Blue3</item>
        <item>Blue4</item>
        <item>Blue5</item>
        <item>Blue6</item>
        <item>Blue7</item>
        <item>Blue8</item>
        <item>Blue9</item>
        <item>Blue10</item>
        <item>Blue11</item>
        <item>Blue12</item>
        <item>Blue13</item>
        <item>Blue14</item>
        <item>Blue15</item>
        <item>Blue16</item>
    </string-array>
    <string-array name="years">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>yellow</item>
        <item>purple</item>
        <item>orange</item>
        <item>Blue1</item>
        <item>Blue2</item>
        <item>Blue3</item>
        <item>Blue4</item>
        <item>Blue5</item>
        <item>Blue6</item>
        <item>Blue7</item>
        <item>Blue8</item>
        <item>Blue9</item>
        <item>Blue10</item>
        <item>Blue11</item>
        <item>Blue12</item>
        <item>Blue13</item>
        <item>Blue14</item>
        <item>Blue15</item>
        <item>Blue16</item>
    </string-array>
    <string name="title_activity_solu_yfirlit">SoluYfirlit</string>
    <string name="title_activity_bakfaersla">Bakfaersla</string>

</resources>
