<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/radialgradientback"
    tools:context="com.example.notandi.easypayprototype.start">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/lblUser"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/easy_pay_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/startSale"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:background="@drawable/graybuttonbackground"
        android:layout_below="@id/imageViewLogo"
        android:text="@string/start_sale"
        android:textSize="22sp" />

    <Button
        android:id="@+id/goToSalesList"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:background="@drawable/graybuttonbackground"
        android:layout_below="@id/startSale"
        android:text="@string/sales_log"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/refund"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:background="@drawable/graybuttonbackground"
        android:layout_below="@id/goToSalesList"
        android:text="@string/refund"
        android:textSize="22sp"/>

</RelativeLayout>
