<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_product"
    android:background="@drawable/radialgradientback">

    <TextView
        style="@style/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/textView20"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_name"
        android:id="@+id/textView21"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:background="#FFFFFF"
        android:layout_below="@+id/textView21"
        android:layout_alignLeft="@+id/textView21"
        android:layout_marginTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_price"
        android:id="@+id/textView25"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText" />

    <EditText
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:background="#FFFFFF"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/textView25"
        android:layout_marginTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_product"
        android:id="@+id/textView26"
        android:textSize="30sp"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/button3"
        android:visibility="visible"
        android:background="@drawable/buttonbackground"
        android:textSize="20sp"
        android:text="@string/finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />
</RelativeLayout>