<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.notandi.easypayprototype.ReceiptSent"
    android:background="@drawable/radialgradientback"
    android:id="@+id/receiptSent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/productName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView27" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView28"
        android:layout_below="@+id/textView27"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/lblUser"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textView28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/receipt"
        android:id="@+id/lblReceiptMsg"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:layout_below="@+id/lblUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thanks"
        android:id="@+id/textView30"
        android:layout_marginTop="53dp"
        android:textSize="30sp"
        android:layout_below="@+id/lblReceiptMsg"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/btnFinalize"
        android:background="@drawable/graybuttonbackground"
        android:layout_below="@+id/textView30"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

</RelativeLayout>
