<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:fitsSystemWindows="true"
    android:layout_height="fill_parent"
    android:background="@drawable/radialgradientback"
    android:id="@+id/">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="fill_parent"
        android:layout_height="250sp"
        android:layout_below="@+id/lblAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/contactless_card"
            android:layout_gravity="center_horizontal|top">

            <!-- The main content view -->

            <!-- The navigation drawer -->

            <ListView
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#333"
                android:choiceMode="singleChoice"
                android:divider="#666"
                android:dividerHeight="1dp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp" />
        </android.support.v4.widget.DrawerLayout>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/productName"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/AmountHome"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount"
        android:id="@+id/lblAmount"
        android:textSize="30sp"
        android:layout_below="@+id/AmountHome"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/insert_cardnumber"
        android:background="@drawable/graybuttonbackground"
        android:textSize="20sp"
        android:id="@+id/btnManualCard2"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pay"
        android:id="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_below="@+id/content_frame"
        android:layout_centerHorizontal="true" />

</RelativeLayout>