<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/product_list"
    android:background="@drawable/radialgradientback"
    android:clickable="true">

    <TextView
        style="@style/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/userProduct"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount"
        android:id="@+id/lblAmount2"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/userProduct"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/btnConfirmList"
        android:visibility="visible"
        android:background="@drawable/buttonbackground"
        android:textSize="20sp"
        android:text="@string/finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:clickable="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="0"
            />

        <GridView
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:numColumns="2"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:drawSelectorOnTop="true"
            android:listSelector="@drawable/list_selector"
            android:layout_marginTop="150dp" />

    </LinearLayout>


    <ImageButton
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:id="@+id/btnAdd"
        android:src="@android:drawable/ic_input_add"
        android:clickable="true"
        android:layout_alignTop="@+id/lblAmount2"
        android:layout_toEndOf="@+id/btnConfirmList"
        android:layout_marginLeft="20dp" />

</RelativeLayout>